objects/ssot__Product__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Age__c</fullName>
        <label>Age</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllowCustomerReturn__c</fullName>
        <label>Allow Customer Return</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllowPartialRefund__c</fullName>
        <label>Allow Partial Refund</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AvailabilityDate__c</fullName>
        <label>Availability Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BasedOnProductClassId__c</fullName>
        <label>Based On Product Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrandId__c</fullName>
        <label>Brand</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BundleType__c</fullName>
        <label>Bundle Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BundledProductsDecidedAtUse__c</fullName>
        <label>Bundled Products Decided At Use</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BundledProductsDecidesAvailability__c</fullName>
        <label>Bundled Products Decides Availability</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BundledProductsSoldTogether__c</fullName>
        <label>Bundled Products Sold Together</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BundledProductsSubstitutional__c</fullName>
        <label>Bundled Products Substitutional</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CanUseQuantitySchedule__c</fullName>
        <label>Quantity Scheduling Enabled</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CanUseRevenueSchedule__c</fullName>
        <label>Revenue Scheduling Enabled</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Color__c</fullName>
        <label>Color</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContainerSizeNumber__c</fullName>
        <label>Container Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContainerSizeUOMId__c</fullName>
        <label>Container Size UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContainerType__c</fullName>
        <label>Container Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Depth__c</fullName>
        <label>Depth</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Diameter__c</fullName>
        <label>Diameter</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DiscontinuedDate__c</fullName>
        <label>Discontinued Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DisposalType__c</fullName>
        <label>Disposal Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DrainedWeight__c</fullName>
        <label>Drained Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EvergreenCntrEstChargeAmount__c</fullName>
        <label>Evergreen Cntr Est Charge Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EvergreenCntrEstmtChargeAmtCurrency__c</fullName>
        <label>Evergreen Cntr Estmt Charge Amt Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EvergreenContractEstimatedMonthCount__c</fullName>
        <label>Evergreen Contract Estimated Month Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedLifespanNumber__c</fullName>
        <label>Expected Lifespan</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedLifespanUOM__c</fullName>
        <label>Expected Lifespan Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedLifetimeUsageNumber__c</fullName>
        <label>Expected Lifetime Usage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedLifetimeUsageUOM__c</fullName>
        <label>Expected Lifetime Usage Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedWasteCount__c</fullName>
        <label>Expected Waste Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceRecordId__c</fullName>
        <label>External Source Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Fabric__c</fullName>
        <label>Fabric</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FormType__c</fullName>
        <label>Form Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Gender__c</fullName>
        <label>Gender</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GrossWeight__c</fullName>
        <label>Gross Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HarmonizedSystemCode__c</fullName>
        <label>Harmonized System Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HarmonizedTariffScheduleCode__c</fullName>
        <label>Harmonized Tariff Schedule Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HelpText__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAssetizable__c</fullName>
        <label>Is Assetizable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAutoProvisionable__c</fullName>
        <label>Is Auto Provisionable</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBackOrdered__c</fullName>
        <label>Is Back Ordered</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCertified__c</fullName>
        <label>Certified</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCompetitiveProduct__c</fullName>
        <label>Competitive Product</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsConfigurableDuringSale__c</fullName>
        <label>Is Configurable During Sale</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsConfigureDuringSale__c</fullName>
        <label>Is Configurable During Sale</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCouponRedemptionAllowed__c</fullName>
        <label>Is Coupon Redemption Allowed</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCustomerDiscountAllowed__c</fullName>
        <label>Is Customer Discount Allowed</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDynamicBundle__c</fullName>
        <label>Is Dynamic Bundle</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsEnvrProtectionRegulationCompliant__c</fullName>
        <label>Envr Protection Regulation Compliant</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsFoodstampPaymentAllowed__c</fullName>
        <label>Is Foodstamp Payment Allowed</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsInstallable__c</fullName>
        <label>Is Installable</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsIntellectualPropertyProtected__c</fullName>
        <label>Is Intellectual Property Protected</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMadeToOrder__c</fullName>
        <label>Is Made To Order</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsManualPriceEntryRequired__c</fullName>
        <label>Is Manual Price Entry Required</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMultipleCouponsAllowed__c</fullName>
        <label>Is Multiple Coupons Allowed</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPartnerDiscountAllowed__c</fullName>
        <label>Is Partner Discount Allowed</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPerishable__c</fullName>
        <label>Is Perishable</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPreOrderable__c</fullName>
        <label>Is Pre Orderable</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsQualityVerificationRequired__c</fullName>
        <label>Is Quality Verification Required</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsQuantityEntryRequired__c</fullName>
        <label>Is Quantity Entry Required</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRainCheckAllowed__c</fullName>
        <label>Is Rain Check Allowed</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsReturnable__c</fullName>
        <label>Is Returnable</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSellableIndependently__c</fullName>
        <label>Is Sellable Independently</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSellableWithoutPrice__c</fullName>
        <label>Is Sellable Without Price</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSellable__c</fullName>
        <label>Is Sellable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSerialized__c</fullName>
        <label>Is Serialized</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSoldOnlyWithOtherProds__c</fullName>
        <label>Is Sold Only With Other Prods</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsWeightEntryRequired__c</fullName>
        <label>Is Weight Entry Required</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsWorkerDiscountAllowed__c</fullName>
        <label>Is Worker Discount Allowed</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LotIdentifier__c</fullName>
        <label>Lot Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MSRPAmountCurrency__c</fullName>
        <label>MSRP Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MSRPAmount__c</fullName>
        <label>MSRP Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MakeName__c</fullName>
        <label>Make Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturerName__c</fullName>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturerPartNumber__c</fullName>
        <label>Manufacturer Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MasterProductId__c</fullName>
        <label>Master Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaxHoldingDayCount__c</fullName>
        <label>Max Holding Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumOrderQuantityCount__c</fullName>
        <label>Maximum Order Quantity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumAdvertisementAmountCurrency__c</fullName>
        <label>Minimum Advertisement Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumAdvertisementAmountStartDate__c</fullName>
        <label>Minimum Advertisement Amount Start Date</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumAdvertisementAmount__c</fullName>
        <label>Minimum Advertisement Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumOrderQuantityCount__c</fullName>
        <label>Minimum Order Quantity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ModelName__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModelNumber__c</fullName>
        <label>Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModelYear__c</fullName>
        <label>Model Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetWeight__c</fullName>
        <label>Net Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PackageProductQuantity__c</fullName>
        <label>Package Product Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PackageType__c</fullName>
        <label>Package Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PackagedInCountry__c</fullName>
        <label>Packaged in Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Pattern__c</fullName>
        <label>Pattern</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceChargeType__c</fullName>
        <label>Price Charge Type Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryProductCategory__c</fullName>
        <label>Primary Product Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryProductImageURL__c</fullName>
        <label>Primary Product Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryProductSubCategoryName__c</fullName>
        <label>Primary Product Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimarySalesChannelId__c</fullName>
        <label>Primary Sales Channel</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProducedInCountry__c</fullName>
        <label>Produced in Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductLineCode__c</fullName>
        <label>Product Line Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductMayExpand__c</fullName>
        <label>Product May Expand</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductSKU__c</fullName>
        <label>Product SKU</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductSecurityRequirement__c</fullName>
        <label>Product Security Requirement</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductStatus__c</fullName>
        <label>Product Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductType__c</fullName>
        <label>Product Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityCount__c</fullName>
        <label>Quantity Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityInstallmentCount__c</fullName>
        <label>Quantity Installment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityInstallmentPeriod__c</fullName>
        <label>Quantity Installment Period</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityScheduleType__c</fullName>
        <label>Quantity Schedule Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitOfMeasure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RentalCleanupFeeAmountCurrency__c</fullName>
        <label>Rental Cleanup Fee Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RentalCleanupFeeAmount__c</fullName>
        <label>Rental Cleanup Fee Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RentalTermViolationPenaltyAmount__c</fullName>
        <label>Rental Term Violation Penalty Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredCleanupProcess__c</fullName>
        <label>Required Cleanup Process</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositAmountCurrency__c</fullName>
        <label>Required Deposit Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositAmount__c</fullName>
        <label>Required Deposit Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositPercentage__c</fullName>
        <label>Required Deposit Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredHumidityPercentage__c</fullName>
        <label>Required Humidity Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredTemperatureHighestNumber__c</fullName>
        <label>Required Temperature Highest Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredTemperatureLowestNumber__c</fullName>
        <label>Required Temperature Lowest Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredTemperatureUOM__c</fullName>
        <label>Required Temperature UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiresInvididualUnitPricing__c</fullName>
        <label>Requires Individual Unit Pricing</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiresUnitPriceLabel__c</fullName>
        <label>Requires Unit Price Label</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueInstallmentCount__c</fullName>
        <label>Revenue Installment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueInstallmentPeriod__c</fullName>
        <label>Revenue Installment Period</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueScheduleType__c</fullName>
        <label>Revenue Schedule Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RewardProgramPointsCount__c</fullName>
        <label>Reward Program Points Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RntlTermVioPentyAmtCurrency__c</fullName>
        <label>Rntl Term Vio Penalty Amt Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SellInCode__c</fullName>
        <label>Sell In Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SellOutCode__c</fullName>
        <label>Sell Out Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SellerName__c</fullName>
        <label>Seller Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicePeriodCount__c</fullName>
        <label>Service Period Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServicePeriodUOM__c</fullName>
        <label>Service Period UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceProviderAccountId__c</fullName>
        <label>Service Provider Account</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceType__c</fullName>
        <label>Service Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShelfFacingUnitCount__c</fullName>
        <label>Shelf Facing Unit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShortCode__c</fullName>
        <label>Short Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SizeUOM__c</fullName>
        <label>Size UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StandardWarrantyLengthMonth__c</fullName>
        <label>Standard Warranty Length Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StockLedgerValuationAmountCurrency__c</fullName>
        <label>Stock Ledger Valuation Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StockLedgerValuationAmount__c</fullName>
        <label>Stock Ledger Valuation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Style__c</fullName>
        <label>Style</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TareWeight__c</fullName>
        <label>Tare Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxClass__c</fullName>
        <label>Tax Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniversalProductCode__c</fullName>
        <label>Universal Product Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UsedFor__c</fullName>
        <label>Used For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ValidForPeriodCount__c</fullName>
        <label>Valid For Period Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ValidForPeriodUOM__c</fullName>
        <label>Valid For Period Unit Of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ValidFromDate__c</fullName>
        <label>Valid From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ValidToDate__c</fullName>
        <label>Valid To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VersionName__c</fullName>
        <label>Version Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WeightNumber__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WeightUOMId__c</fullName>
        <label>Weight UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761215819_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product_PrimarySalesChannelId_map_Sa_rel</label>
        <referenceTo>ssot__SalesChannel__dlm</referenceTo>
        <relationshipLabel>Product_PrimarySalesChannelId_map_Sa_rel</relationshipLabel>
        <relationshipName>rel_1697761215819_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761216051_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product_ServiceProviderAccountId_map_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Product_ServiceProviderAccountId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761216051_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761216124_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product_MasterProductId_map_Product__rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>Product_MasterProductId_map_Product__rel</relationshipLabel>
        <relationshipName>rel_1697761216124_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>